tests/snapshots/dot_snapshots__orphan_session.snap
---
source: tests/dot_snapshots.rs
assertion_line: 127
expression: rendered
---
digraph conspectus {
  graph [rankdir=LR, fontname="Helvetica"];
  node [fontname="Helvetica", style="filled,rounded"];
  edge [fontname="Helvetica", fontsize=10];
  subgraph cluster_5_agent_session {
    label="Agent Sessions"; style=dashed; color="#90a4ae"; fontcolor="#455a64";
    "n_agent_session_codex__home_me__codex_session_orphan" [label="codex: orphan session\nsession-orphan", shape=box, fillcolor="#f8bbd0"];
  }
}
